fix alignment of home-footer widgets

--- a/style.css
+++ b/style.css
@@ -1000,7 +1000,34 @@ color:#fff;/* @new */
 
 /* Layout: Columns @framework maybe */
 
-.one-fourth,.one-half,.one-third{margin:1.5em 0;padding-left:2%;padding-right:2%;float:left}.one-half{width:46%}.wrapper .one-half:nth-child(odd){padding-left:0;clear:left}.wrapper .one-half:nth-child(even){padding-right:0}.one-third{width:29.3%}.wrapper .one-third:nth-child(3n-2){padding-left:0;clear:left}.wrapper .one-third:nth-child(3n+3){padding-right:0}.one-fourth{width:21%}.wrapper .one-fourth:nth-child(4n-3){padding-left:0;clear:left}.wrapper .one-fourth:nth-child(4n+4){padding-right:0}.one-fourth+h2,.one-fourth+h3,.one-half+h2,.one-half+h3,.one-third+h2,.one-third+h3{clear:both;padding-top:1em}
+.one-fourth,.one-half,.one-third{
+	margin:1.5em 0;
+	padding-left:2%;
+	padding-right:2%;
+	float:left
+}
+.one-half{width:46%}
+.one-third{width:29.3%}
+.one-fourth{width:21%}
+
+
+/* No left padding on 1st column */
+.wrapper .one-half:nth-child(odd),
+.wrapper .one-third:nth-child(3n-2),
+.wrapper .one-fourth:nth-child(4n-3),
+.wrapper .alpha {
+	padding-left:0;clear:left
+}
+
+/* No right padding on final column */
+.wrapper .one-half:nth-child(even),
+.wrapper .one-third:nth-child(3n+3),
+.wrapper .one-fourth:nth-child(4n+4),
+.wrapper .omega {
+	padding-right:0
+}
+
+.one-fourth+h2,.one-fourth+h3,.one-half+h2,.one-half+h3,.one-third+h2,.one-third+h3{clear:both;padding-top:1em}
 
 /*--------------------------------------------------------------
 11.0 Infinite scroll
